--- a/src/components/ForgetPassword/style.module.css
+++ b/src/components/ForgetPassword/style.module.css
@@ -1,109 +1,98 @@
-@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 .button {
-    width: 100%;
-    height: 40px;
-    border-radius: 7px;
-    background-color: #0E9D85;
-    margin: 10px 0 20px 0;
-    border: 0px solid magenta;
-    font-size: 15px;
-    color: white;
+  width: 100%;
+  height: 40px;
+  border-radius: 7px;
+  background-color: #0e9d85;
+  margin: 10px 0 20px 0;
+  border: 0px solid magenta;
+  font-size: 15px;
+  color: white;
 }
 
-
 .inputSpace {
-    width: 350px;
-    margin: auto;
+  align-items: start;
+  width: 350px;
+  margin: auto;
 }
 
 .title {
-    display: flex;
-    font-size: 35px;
-    font-weight: 700;
+  display: flex;
+  font-size: 35px;
+  font-weight: 700;
 }
 
-
 .input {
-    width: 100%;
-    border-radius: 5px;
-    height: 30px;
-    border: 1.5px solid rgb(203, 203, 203);
-
+  width: 100%;
+  border-radius: 5px;
+  height: 30px;
+  border: 1.5px solid rgb(203, 203, 203);
 }
 
 .input:hover {
-    border: 1.5px solid rgb(179, 179, 179);
+  border: 1.5px solid rgb(179, 179, 179);
 }
 
 .button:hover {
-    background-color: #0e9d85e0;
-    cursor: pointer;
+  background-color: #0e9d85e0;
+  cursor: pointer;
 }
 
 .error {
-    min-width: 30%;
-    font-size: .8rem;
-    background-color: #e3dcdc;
-    border-radius: 10px;
-    color: #000;
-    transform: scale(1);
-    height: 1.3rem;
-    display: flex;
-    align-items: center;
-    padding: 0 0.6rem;
-    overflow-x: auto;
-    text-align: start;
+  min-width: 30%;
+  font-size: 0.8rem;
+  background-color: #e3dcdc;
+  border-radius: 10px;
+  color: #000;
+  transform: scale(1);
+  height: 1.3rem;
+  display: flex;
+  align-items: center;
+  padding: 0 0.6rem;
+  overflow-x: auto;
+  text-align: start;
 }
 
 .container {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: right;
-    align-items: start;
-    text-align: right;
-    background-color: #F7F7F7;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: right;
+  text-align: right;
+  background-color: #f7f7f7;
 }
 
-
 .allin {
-    width: 400px;
-    height: auto;
-    background-color: rgb(255, 255, 255);
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    margin-top: auto;
-    margin-bottom: auto;
-    margin-right: 50px;
-   
-   
+  width: 400px;
+  height: auto;
+  background-color: rgb(255, 255, 255);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-right: 50px;
 }
 
 .circle {
-    /* background-color: ; */
-    border: 190px solid rgba(14, 157, 133, 0.103);
-    border-radius: 100%;
-    width: 600px;
-    height: 600px;
-    position: fixed;
-    top: -240px;
-    left: -240px;
+  /* background-color: ; */
+  border: 190px solid rgba(14, 157, 133, 0.103);
+  border-radius: 100%;
+  width: 600px;
+  height: 600px;
+  position: fixed;
+  top: -240px;
+  left: -240px;
 }
 
 .tabSwitcher {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    border-bottom: 3px solid #0E9D85;
-    color: #0E9D85;
-    transition: 0.1s;
-    margin-top: 10px;
+  margin: -7px 0 0 0;
+  display: flex;
+  font-size: 18px;
+  font-family: var(--header-font);
+  font-weight: 400;
 }
